# integrated_app

./: Dockerfile  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci-cd.yaml  ci.yml  deploy.yaml  docker-build.yml  docker-compose.build.yml  docker-compose.yml
integrated_app/: README.md  docker-compose.yml  setup-minikube.sh
integrated_app/ai-agent/: agent_logic.py  app.py  pyproject.toml  readme.md  requirements.txt
integrated_app/ai-agent/test/: test_agent.py
integrated_app/backend/: Dockerfile  agent1.py  app.py  application.yml  pom.xml
integrated_app/frontend/: Dockerfile  package.json
integrated_app/frontend/src/: package.json  tsconfig.json
integrated_app/frontend/src/api/: agentAPI.js  api.ts
integrated_app/frontend/src/components/: AgentLog.tsx  Loader.tsx  StrategyForm.jsx
integrated_app/frontend/src/pages/: index.tsx
integrated_app/hybrid-ai-app/: README.md  docker-compose.yaml
integrated_app/hybrid-ai-app/flask-agent/: requirements.txt
integrated_app/hybrid-ai-app/flask-agent/app/: agent_logic.py  config.py  routes.py
integrated_app/hybrid-ai-app/flask-agent/app/controllers/: agent_controller.py
integrated_app/hybrid-ai-app/flask-agent/app/models/: agent_log.py
integrated_app/hybrid-ai-app/flask-agent/app/services/: __init__.py  agent_logic.py
integrated_app/hybrid-ai-app/frontend/src/: App.jsx  Dockerfile
integrated_app/hybrid-ai-app/frontend/src/api/: agentAPI.js
integrated_app/hybrid-ai-app/frontend/src/components/: AgentMonitor.jsx
integrated_app/hybrid-ai-app/spring-api/src/main/resources/: application.yml
(+4 files in other folders)
